# rust-s3

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: deny.yml  rust.yml
aws-creds/: Cargo.toml
aws-creds/src/: credentials.rs
aws-region/: Cargo.toml
examples/: minio-tokio.rs
s3/: Cargo.toml
s3/src/: bucket2.rs  bucket_ops.rs  bucket_tests.rs  command.rs  error.rs  lib.rs  post_policy.rs  serde_types.rs  signing.rs  utils.rs
s3/src/bucket/: copy.rs  create.rs  credentials.rs  delete.rs  get.rs  head.rs  list.rs  mod.rs  presign.rs  put.rs  tag.rs  utils.rs
s3/src/request/: async_common.rs  async_std_backend.rs  mod.rs  request_trait.rs  tokio_backend.rs
s3/src/utils/: mod.rs
