[package]
name = "zitane-aws-creds"
version = "0.36.0"
authors = ["Drazen Urch", "Zitane Labs"]
description = "Tiny Rust library for working with Amazon IAM credentials"
repository = "https://github.com/ZitaneLabs/rust-s3-async"
readme = "README.md"
keywords = ["AWS", "S3", "Wasabi", "Minio", "R2"]
license.workspace = true
edition = "2021"

[lib]
name = "awscreds"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
rust-ini = "0.19"
attohttpc = { version = "0.25", default-features = false, features = [
    "json",
], optional = true }
url = "2"
quick-xml = { version = "0.29", features = [ "serialize" ] }
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
log = "0.4"

[features]
default = ["native-tls"]
http-credentials = ["attohttpc"]
native-tls = ["http-credentials", "attohttpc/tls"]
native-tls-vendored = [ "http-credentials", "attohttpc/tls-vendored" ]
rustls-tls = ["http-credentials", "attohttpc/tls-rustls"]

[dev-dependencies]
env_logger.workspace = true
serde_json = "1"
