[package]
name = "zitane-aws-region"
version = "0.26.0"
authors = ["Drazen Urch", "Zitane Labs"]
description = "Tiny Rust library for working with Amazon AWS regions"
repository = "https://github.com/ZitaneLabs/rust-s3-async"
readme = "README.md"
keywords = ["AWS", "S3", "Wasabi", "Minio", "R2"]
license.workspace = true
edition = "2021"

[lib]
name = "awsregion"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde = { version = "1", features = ["derive"], optional = true }
