[package]
name = "rust-s3-async"
version = "0.36.0"
authors = ["Drazen Urch", "Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
description = "Rust library for working with AWS S3 and compatible object storage APIs"
repository = "https://github.com/aalekhpatel07/rust-s3-async"
readme = "README.md"
keywords = ["S3", "Wasabi", "Minio", "GCP", "R2"]
license = "MIT"
documentation = "https://docs.rs/aws-creds/latest/awscreds/"
edition = "2018"

[lib]
name = "s3"
path = "src/lib.rs"

[[example]]
name = "tokio"
path = "../examples/tokio-backend.rs"

[[example]]
name = "minio"
path = "../examples/minio-tokio.rs"

[[example]]
name = "r2"
path = "../examples/r2-tokio.rs"

[[example]]
name = "google-cloud"
path = "../examples/gcs-tokio.rs"

[dependencies]
async-trait = "0.1"
aws-creds = { version = "0.35.0", default-features = false }
# aws-creds = { path = "../aws-creds", default-features = false }
aws-region = "0.25.3"
# aws-region = {path = "../aws-region"}
base64 = "0.21"
cfg-if = "1"
time = { version = "^0.3.6", features = ["formatting", "macros"] }
futures = "^0.3"
hex = "0.4"
hmac = "0.12"
http = "0.2"
hyper = { version = "^0.14", default-features = false, features = [
    "client",
    "http1",
    "http2",
    "stream",
] }
hyper-tls = { version = "0.5.0", default-features = false }
tracing = { version="0.1.35" }
md5 = "0.7"
percent-encoding = "2"
serde = { version = "1", features = ["derive"]}
quick-xml = { version = "0.28", features = ["serialize"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = [
    "io-util",
    "fs"
], default-features = false }
tokio-native-tls = { version = "0.3" }
tokio-stream = { version = "0.1" }
url = "2"
minidom = { version = "0.15" }
bytes = { version = "1" }
strum_macros = "0.24.3"

[features]
default = ["aws-creds/native-tls"]
no-verify-ssl = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.10"
anyhow = "1"
