[package]
name = "zitane-s3-async"
version = "0.38.0"
authors = ["Drazen Urch", "Aalekh Patel <aalekh.gwpeck.7998@icloud.com>", "Marco Quinten <splittydev@gmail.com>"]
description = "Rust library for working with AWS S3 and compatible object storage APIs"
repository = "https://github.com/ZitaneLabs/rust-s3-async"
readme = "README.md"
keywords = ["S3", "Wasabi", "Minio", "GCP", "R2"]
license.workspace = true
edition = "2021"

[lib]
name = "s3"
path = "src/lib.rs"

[[example]]
name = "tokio"
path = "../examples/tokio-backend.rs"

[[example]]
name = "minio"
path = "../examples/minio-tokio.rs"

[[example]]
name = "r2"
path = "../examples/r2-tokio.rs"

[[example]]
name = "google-cloud"
path = "../examples/gcs-tokio.rs"

[dependencies]
async-trait = "0.1"
zitane-aws-creds = { version = "0.36", default-features = false }
zitane-aws-region = "0.26"
base64 = "0.22"
cfg-if = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.1"
hyper = { version = "1", default-features = false, features = [
    "client",
    "http1",
    "http2",
] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tracing = { version = "0.1" }
md5 = "0.7"
percent-encoding = "2"
serde = { version = "1", features = ["derive"]}
quick-xml = { version = "0.31", features = ["serialize"] }
sha2 = "0.10"
thiserror.workspace = true
tokio = { version = "1", features = [
    "io-util",
    "fs"
], default-features = false }
tokio-native-tls = { version = "0.3" }
tokio-stream = { version = "0.1" }
url = "2"
bytes = { version = "1" }
strum_macros = "0.26"

[features]
default = ["zitane-aws-creds/native-tls"]
no-verify-ssl = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
uuid = { version = "1", features = ["v4"] }
env_logger.workspace = true
anyhow = "1"
